# orchy

./: .clangd  .gitignore  CMakeLists.txt  README.md  run.sh
apps/: CMakeLists.txt
cpp/: CMakeLists.txt  run.sh
cpp/apps/: app.cpp
cpp/include/: constants.h  lexer.hpp  scanner.hpp  token.hpp
cpp/include/lexer/: lexer.hpp
cpp/include/scanner/: scanner.hpp
cpp/include/token/: token.hpp
cpp/src/: CMakeLists.txt  Expression  Expression.cpp  lexer.cpp  scanner.cpp  token.cpp
cpp/tools/ast/: ast.cpp
include/: expression.hpp  lexer.hpp  printer.hpp  scanner.hpp  token.hpp
src/: CMakeLists.txt  expression.cpp  lexer.cpp  printer.cpp  scanner.cpp  token.cpp
tools/: CMakeLists.txt
tools/ast/: ast.cpp
